# soksak-sidecar-chromium

./: Cargo.toml  stage.sh
.github/workflows/: onscreen.yml  release.yml
docs/: PLATFORMS.ko.md  PLATFORMS.md
release/: unit.json
src/: engine.rs  frame_stream.rs  lib.rs
src/presenter/: linux.rs  macos.rs  windows.rs
