# soksak-sidecar-browser-chromium — Chromium 엔진 사이드카(engine 모델, in-process dylib).
# 코어는 이 크레이트를 링크하지 않는다 — 런타임 dlopen(코어 sidecar.rs) + C ABI(soksak-engine-abi).
# 서드파티 임베딩 라이브러리 `cef`(CEF)의 이름은 이 크레이트 안에만 존재한다(docs/NAMING.md §2).
[package]
name = "soksak-sidecar-browser-chromium"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# rlib 병행 — E2E 하니스 바이너리가 라이브러리 크레이트를 직접 링크한다(cdylib 산출물 불변).
crate-type = ["cdylib", "rlib"]

# CEF 서브프로세스(renderer/GPU/utility) 전용 helper — LibraryLoader(helper)+execute_process 만.
[[bin]]
name = "soksak-sidecar-browser-chromium-helper"
path = "src/bin/helper.rs"

# E2E 하니스 — 앱 없이 엔진을 통째로 구동해 호스팅 계약(create/query/입력/offscreen)을 검증하는
# 독립 프로세스(코어 역할을 스스로 수행). harness 피처로만 빌드된다 — dylib 산출물 불변.
[[bin]]
name = "harness"
path = "src/bin/harness.rs"
required-features = ["harness"]

[features]
harness = ["dep:winit", "dep:raw-window-handle"]

[dependencies]
libc = "0.2"
serde_json = "1"

# Chromium 임베딩(CEF) — 전 타깃. 프레임워크는 정적 링크가 아니라 런타임 dlopen(LibraryLoader).
cef = { version = "149.3.0", default-features = false }
# 하니스 전용(feature=harness) — 테스트 창/런루프. dylib 에는 포함되지 않는다.
winit = { version = "0.30", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 네이티브 뷰/레이어(presenter/macos.rs·offscreen.rs 오라클·engine.rs cfg(macos)).
objc2 = "0.6"
objc2-foundation = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
# 신규 플랫폼(win/linux) present = cef osr_texture_import(accelerated_osr) → wgpu::Texture → wgpu::Surface.
# wgpu 는 cef 크레이트가 쓰는 버전(29)에 핀 — import_texture 가 그 wgpu::Device 를 받는다. macOS 는 raw
# Metal(offscreen.rs)이라 이 의존을 안 받는다(dylib lean, frozen 불변).
cef = { version = "149.3.0", default-features = false, features = ["accelerated_osr"] }
wgpu = "29"
raw-window-handle = "0.6"
pollster = "0.4"      # wgpu request_adapter/request_device 는 async — present 경로에서 block_on
bytemuck = { version = "1", features = ["derive"] }  # quad 정점 버퍼 캐스팅(예제 패턴)

[target.'cfg(target_os = "linux")'.dependencies]
# offscreen child 창(코어 부모 XID 아래 XCreateWindow) → wgpu Surface(Vulkan VK_KHR_xlib_surface).
# x11-dl(Xlib)은 wgpu 가 요구하는 Display*+Window 를 준다(x11rb pure-rust 는 xcb 커넥션 포인터 미노출).
x11-dl = "2"

[target.'cfg(target_os = "windows")'.dependencies]
# offscreen child 창(코어 부모 HWND 아래 CreateWindowExW WS_CHILD) → wgpu Surface(D3D12/Vulkan).
# 창 생성만 담당 — HWND 를 isize 로 raw-window-handle 에 넘긴다(cef 의 windows dep 버전과 무관).
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading"] }

# 독립 워크스페이스 — 코어(src-tauri) 워크스페이스와 분리(cargo 는 멤버가 루트 하위여야 해서 형제
# 디렉토리 편입 불가). 빌드·스테이징은 make sidecar-chromium 이 소유.
[workspace]
